Updated root index.html
Update:
Root index.html now redirects user to the (latest) version specified.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <html>
   <head>
-    <title>Shivlok Sharma</title>
+    <meta http-equiv="refresh" content="0;url=https://imshivlok.site/v1">
   </head>
-  <body>
-    <h2>Portfolio - WIP</h2>
-  </body>
 </html>
