--- a/index.html
+++ b/index.html
@@ -1,14 +1,112 @@
 <html>
   <head>
-    <title>imshivlok</title>
+    <title>Shivlok Sharma</title>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
+      body{
+        background: url("images/back.png");
+        background-position: center;
+        background-size: cover;
+        color:#758694;
+      }
+      .main{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: 100vh;
+        row-gap: 3vw;
+      }
+      .main .profile{
+        display: inherit;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        column-gap: 2vw;
+        background-color:#405D72;
+        padding: 36px 42px;
+        border-radius: 2rem;
+        box-shadow: #000000c5 2px 4px 8px;
+        box-sizing: border-box;
+      }
+      .main .profile .profilePicture img{
+        height: 35vh;
+        border-radius: 50%;
+      }
+      .main .profile .profileInformation .name{
+        font:min(5vw,5vh)monospace;
+        color:#000000;
+      }
+      .main .profile .profileInformation .designation{
+        font:min(2vw,2vh)monospace;
+      }
+      .loginButton{
+        padding:15px 0;
+      }
+      button{
+        background: #000000;
+        border: 1px solid #000000;
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        display: inline-block;
+        font-family: monospace;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 16px;
+        min-height: 40px;
+        outline: 0;
+        padding: 12px 20px;
+        text-align: center;
+        text-rendering: geometricprecision;
+        text-transform: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: middle;
+      }
+      button:hover,
+      button:active {
+        background-color: initial;
+        background-position: 0 0;
+        color: #000000;
+      }
+      button:active {
+        opacity: .5;
+      }
+    </style>
   </head>
-  <body style="padding:10%; background-color:#405D72; color:#758694;">
+  <body>
+    <!-- <div class="profilePhoto"><img src="images/shivlok-cropped.jpg" alt="shivlok.jpg" style="height: 18vw;"></div>
     <div class="header">
-      <p style="font:min(9vw,9vh)monospace;"><span style="color:#000000;">imshivlok,</span><br>loves<br>building <a href="projects" style="color:#FB773C;">stuff.</a></p>
+      <p style="font:min(7vw,7vh)monospace;"><span style="color:#000000;">Shivlok Sharma.</span><br><span style="font:min(5vw,5vh)monospace;">Programmer</span></p>
     </div>
       <hr>
     <div class="footer">
       <p style="font:min(3vw,3vh)monospace;">❤️ Inspired by <a href="https://cenzontle.us" style="color:#F7E7DC;">cenzontle.us</a></p>
+    </div> -->
+
+    <div class="main">
+      <div class="profile">
+        <div class="profilePicture">
+          <img src="images/shivlok-cropped.jpg" alt="shivlok.jpg">
+        </div>
+        <div class="profileInformation">
+          <div class="name">Shivlok Sharma</div>
+          <!-- <div class="userName">@imshivlok</div> -->
+          <div class="designation">18yo Web Developer based in India.</div>
+          <div class="login">
+            <div class="loginButton">
+              <button>Log In</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
