--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
-  <head>
-    <title>Shivlok Sharma</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
 
-    <!-- <div class="main">
+<head>
+  <title>Shivlok Sharma</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <!-- <div class="main">
       <div class="profile">
         <div class="profilePicture">
           <img src="images/logo.jpg" alt="shivlok.jpg">
         </div>
         <div class="profileInformation">
           <div class="name">Shivlok Sharma</div> -->
-          <!-- <div class="userName">@imshivlok</div> -->
-          <!-- <div class="designation">18yo Web Developer based in India.</div>
+  <!-- <div class="userName">@imshivlok</div> -->
+  <!-- <div class="designation">18yo Web Developer based in India.</div>
           <div class="login">
             <div class="loginButton">
               <button>Contact</button>
@@ -23,9 +25,22 @@
       </div>
     </div> -->
 
-    <div class="container">
-      <div class="column">Left Column</div>
-      <div class="column">Right Column</div>
+  <div id="main">
+    <div class="profile">
+      <div class="column" id="profilePicture">
+        <img src="images/logo.jpg" alt="logo.jpg">
+      </div>
+      <div class="column" id="profileDescription">
+        <div class="name">Shivlok Sharma</div>
+        <div class="designation">18yo Web Developer based in India.</div>
+        <div class="login">
+          <div class="loginButton">
+            <button>Contact</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
