Added meta tags

--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shivlok Sharma</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-  <!-- <div class="main">
-      <div class="profile">
-        <div class="profilePicture">
-          <img src="images/logo.jpg" alt="shivlok.jpg">
-        </div>
-        <div class="profileInformation">
-          <div class="name">Shivlok Sharma</div> -->
-  <!-- <div class="userName">@imshivlok</div> -->
-  <!-- <div class="designation">18yo Web Developer based in India.</div>
-          <div class="login">
-            <div class="loginButton">
-              <button>Contact</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
   <div id="main">
-    <div class="profile">
-      <div class="column" id="profilePicture">
+    <div id="profile">
+      <div id="profilePicture">
         <img src="images/logo.jpg" alt="logo.jpg">
       </div>
-      <div class="column" id="profileDescription">
-        <div class="name">Shivlok Sharma</div>
-        <div class="designation">18yo Web Developer based in India.</div>
-        <div class="login">
-          <div class="loginButton">
+      <div id="profileDescription">
+        <div id="name">Shivlok Sharma</div>
+        <div id="about">18yo Web Developer based in India.</div>
+        <div id="contact">
+          <div id="contactButton">
             <button>Contact</button>
           </div>
         </div>
