Optimized files and folders

--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Shivlok is an 18yo Web Developer based in India.">
   <title>Shivlok Sharma</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png">
 </head>
 
 <body>
   <div id="main">
     <div id="profile">
       <div id="profilePicture">
-        <img src="images/logo.jpg" alt="logo.jpg">
+        <img src="assets/images/logo.webp" alt="logo">
       </div>
       <div id="profileDescription">
         <div id="name">Shivlok Sharma</div>
         <div id="about">18yo Web Developer based in India.</div>
         <div id="contact">
           <div id="contactButton">
-            <button>Contact</button>
+            <a href="mailto:imshivlok@gmail.com">
+              <button>Contact</button>
+            </a>
           </div>
         </div>
       </div>
