--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <span>hi</span>
+    </main>
     <script src="static/js/script.js"></script>
 </body>
 </html>
